--- a/OpenCV Tutorial.ipynb
+++ b/OpenCV Tutorial.ipynb
@@ -89,18 +89,7 @@
    "execution_count": 6,
    "id": "f4b9848b",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "52"
-      ]
-     },
-     "execution_count": 6,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "#extract a 100x100 pixel square ROI (Region of Interest)\n",
     "# roi = image[60:160, 320:420]\n",
@@ -125,7 +114,7 @@
     {
      "data": {
       "text/plain": [
-       "52"
+       "0"
       ]
      },
      "execution_count": 7,
@@ -142,17 +131,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 8,
    "id": "2ad7cff4",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "52"
+       "0"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -168,17 +157,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 9,
    "id": "da776203",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "52"
+       "0"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -200,8 +189,272 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "id": "61de1f7d",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0"
+      ]
+     },
+     "execution_count": 12,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "#rotate image 45 degrees\n",
+    "#computing the image center then constructing the rotation matrix\n",
+    "#then applying the affine warp\n",
+    "\n",
+    "# // is to apply integer math, no float values\n",
+    "#positive angles are counterclockwise and negative angles are clockwise\n",
+    "\n",
+    "center = (w//2, h//2)\n",
+    "M = cv2.getRotationMatrix2D(center, -45, 1.0)\n",
+    "rotated = cv2.warpAffine(image, M, (w,h))\n",
+    "cv2.imshow(\"OenCV Rotation\", rotated)\n",
+    "cv2.waitKey(0)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "id": "d55636d0",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "102"
+      ]
+     },
+     "execution_count": 15,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# rotation with imutils\n",
+    "rotated = imutils.rotate(image, -45)\n",
+    "cv2.imshow(\"Imutils Rotation\", rotated)\n",
+    "cv2.waitKey(0)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "id": "8fddd31f",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "115"
+      ]
+     },
+     "execution_count": 18,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# rotate and keep edges \n",
+    "rotated = imutils.rotate_bound(image, 45)\n",
+    "cv2.imshow(\"Imutils Bound Rotation\", rotated)\n",
+    "cv2.imshow(\"Imutils Bound Rotation\", rotated)\n",
+    "cv2.waitKey(0)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "bf88c868",
+   "metadata": {},
+   "source": [
+    "# Smoothing an Image"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "id": "992f2ef3",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#smoothing to remove noise and help our algorithms to focus on the content not the noise"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "id": "8d6c4870",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "100"
+      ]
+     },
+     "execution_count": 20,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "#Apply a Gaussian blur with a 11x11 kernel to smooth image\n",
+    "#useful for reducing high frequency noise\n",
+    "blurred = cv2.GaussianBlur(image, (11,11), 0)\n",
+    "cv2.imshow(\"Blurred\", blurred)\n",
+    "cv2.waitKey(0)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "id": "36c1acae",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#smaller kernel is less blurred larger kernal is more blurred \n",
+    "# read more here: https://www.pyimagesearch.com/2016/07/25/convolutions-with-opencv-and-python/"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "175f93b2",
+   "metadata": {},
+   "source": [
+    "# Drawing on an Image"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "id": "139041eb",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "100"
+      ]
+     },
+     "execution_count": 22,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "#draw a 2px thick read rectangle surrounding the face\n",
+    "# we copy the image so that we do not draw on the original \n",
+    "output = image.copy()\n",
+    "cv2.rectangle(output, (320,60), (420,160), (0,0,255),2)\n",
+    "cv2.imshow(\"Rectangle\", output)\n",
+    "cv2.waitKey(0)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 24,
+   "id": "6da9dfd1",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "100"
+      ]
+     },
+     "execution_count": 24,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "#draw a blue 20px (filled in) circle on the impage centered at x=300 y=150\n",
+    "# -1 fopr the thickness will fill in the circle\n",
+    "output = image.copy()\n",
+    "cv2.circle(output, (300, 150), 20, (255,0,0), -1)\n",
+    "cv2.imshow(\"Circle\", output)\n",
+    "cv2.waitKey(0)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 25,
+   "id": "c7cee05c",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "115"
+      ]
+     },
+     "execution_count": 25,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "#draw a 5px thick red line from x=60, y=20 to x=400, y=200\n",
+    "output= image.copy()\n",
+    "cv2.line(output, (60,20), (400, 200), (0,0, 255), 5)\n",
+    "cv2.imshow(\"Line\", output)\n",
+    "cv2.waitKey(0)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 27,
+   "id": "9a2669f7",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "117"
+      ]
+     },
+     "execution_count": 27,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "#draw green text on the image\n",
+    "output = image.copy()\n",
+    "cv2.putText(output, \"OPenCv + Jurassic Park!!\", (10,25),\n",
+    "           cv2.FONT_HERSHEY_SIMPLEX, 0.7, (0,255,0), 2)\n",
+    "cv2.imshow(\"Text\", output)\n",
+    "cv2.waitKey(0)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 28,
+   "id": "f4351145",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Fonts List https://docs.opencv.org/3.4.1/d0/de1/group__core.html#ga0f9314ea6e35f99bb23f29567fc16e11"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "4b2e6bdb",
+   "metadata": {},
+   "source": [
+    "# Counting Objects"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "acbf354f",
    "metadata": {},
    "outputs": [],
    "source": []
