--- a/OpenCV Tutorial.ipynb
+++ b/OpenCV Tutorial.ipynb
@@ -2,14 +2,15 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 3,
    "id": "07beff57",
    "metadata": {},
    "outputs": [],
    "source": [
     "#importing the libraries\n",
     "import imutils\n",
-    "import cv2"
+    "import cv2\n",
+    "import argparse"
    ]
   },
   {
@@ -453,8 +454,162 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "id": "acbf354f",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "usage: ipykernel_launcher.py [-h] -i IMAGE\n",
+      "ipykernel_launcher.py: error: the following arguments are required: -i/--image\n"
+     ]
+    },
+    {
+     "ename": "SystemExit",
+     "evalue": "2",
+     "output_type": "error",
+     "traceback": [
+      "An exception has occurred, use %tb to see the full traceback.\n",
+      "\u001b[1;31mSystemExit\u001b[0m\u001b[1;31m:\u001b[0m 2\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "C:\\Users\\araet\\Anaconda3\\lib\\site-packages\\IPython\\core\\interactiveshell.py:3445: UserWarning: To exit: use 'exit', 'quit', or Ctrl-D.\n",
+      "  warn(\"To exit: use 'exit', 'quit', or Ctrl-D.\", stacklevel=1)\n"
+     ]
+    }
+   ],
+   "source": [
+    "# construct the argument parser and parse the arguments\n",
+    "ap = argparse.ArgumentParser()\n",
+    "ap.add_argument(\"-i\", \"--image\", required=True, help=\"path to input image\")\n",
+    "args = vars(ap.parse_args())"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "7f79305a",
+   "metadata": {},
+   "source": [
+    "# Converting an image to grayscale"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "id": "243bb7fc",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "49"
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# load and display the image\n",
+    "image = cv2.imread(\"tetris_blocks.png\")\n",
+    "cv2.imshow(\"Image\", image)\n",
+    "cv2.waitKey(0)\n",
+    "\n",
+    "# convert the image to grayscale\n",
+    "gray = cv2.cvtColor(image, cv2.COLOR_BGR2GRAY)\n",
+    "cv2.imshow(\"Gray\", gray)\n",
+    "cv2.waitKey(0)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "2d3add47",
+   "metadata": {},
+   "source": [
+    "# Edge Detection"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "id": "97fb4cc8",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "13"
+      ]
+     },
+     "execution_count": 8,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# applying edge detection to find outline of objects in image\n",
+    "# Uses Canny algorithum to find edges\n",
+    "# different thresholds for minVal and maxVal in algo\n",
+    "# will return different edge maps\n",
+    "edged = cv2.Canny(gray, 30, 150)\n",
+    "cv2.imshow(\"Edge\", edged)\n",
+    "cv2.waitKey(0)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "81269b18",
+   "metadata": {},
+   "source": [
+    "# Thresholding"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "id": "cdb23c63",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "48"
+      ]
+     },
+     "execution_count": 9,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# threshold the image by setting all pixel values less than 225\n",
+    "# to 255 (white; foreground) and all pixel values >= 225 to 0\n",
+    "# (black; background), segmenting image\n",
+    "#Thresholding is a critical step in finding contours\n",
+    "thresh = cv2.threshold(gray, 225, 255, cv2.THRESH_BINARY_INV)[1]\n",
+    "cv2.imshow(\"Thresh\", thresh)\n",
+    "cv2.waitKey(0)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "f682083b",
+   "metadata": {},
+   "source": [
+    "# Detecting and Drawing Contours"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "cdd967bd",
    "metadata": {},
    "outputs": [],
    "source": []
