--- a/OpenCV Tutorial.ipynb
+++ b/OpenCV Tutorial.ipynb
@@ -1,6 +1,15 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "id": "762a641c",
+   "metadata": {},
+   "source": [
+    "# OpenCV Tutorial: A Guide to Learn OpenCV:\n",
+    "https://www.pyimagesearch.com/2018/07/19/opencv-tutorial-a-guide-to-learn-opencv/"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 3,
    "id": "07beff57",
@@ -493,7 +502,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "7f79305a",
+   "id": "561d13c8",
    "metadata": {},
    "source": [
     "# Converting an image to grayscale"
@@ -502,7 +511,7 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "243bb7fc",
+   "id": "9275ee4c",
    "metadata": {},
    "outputs": [
     {
@@ -530,7 +539,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "2d3add47",
+   "id": "ad897871",
    "metadata": {},
    "source": [
     "# Edge Detection"
@@ -539,7 +548,7 @@
   {
    "cell_type": "code",
    "execution_count": 8,
-   "id": "97fb4cc8",
+   "id": "7ac2c0eb",
    "metadata": {},
    "outputs": [
     {
@@ -565,7 +574,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "81269b18",
+   "id": "8ddcb920",
    "metadata": {},
    "source": [
     "# Thresholding"
@@ -574,7 +583,7 @@
   {
    "cell_type": "code",
    "execution_count": 9,
-   "id": "cdb23c63",
+   "id": "8f1ba29b",
    "metadata": {},
    "outputs": [
     {
@@ -600,7 +609,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "f682083b",
+   "id": "b37f4e61",
    "metadata": {},
    "source": [
     "# Detecting and Drawing Contours"
@@ -608,8 +617,148 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 12,
+   "id": "43cbd9ad",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#find contours of the foreground objects in teh threshold image\n",
+    "cnts = cv2.findContours(thresh.copy(), cv2.RETR_EXTERNAL,\n",
+    "                    cv2.CHAIN_APPROX_SIMPLE)\n",
+    "cnts = imutils.grab_contours(cnts)\n",
+    "output = image.copy()\n",
+    "\n",
+    "#loop over the contours\n",
+    "for c in cnts:\n",
+    "    #draw each contour on the output image with a 3px thick purple\n",
+    "    #outline, then display the output contours one at a time\n",
+    "    cv2.drawContours(output, [c], -1, (240,0,159),3)\n",
+    "    cv2.imshow(\"Contours\", output)\n",
+    "    cv2.waitKey(0)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "id": "ec0542ed",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "-1"
+      ]
+     },
+     "execution_count": 14,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "#draw the total number of contours found in purple\n",
+    "text = \"I found {} objects!\".format(len(cnts))\n",
+    "cv2.putText(output, text, (10,25), cv2.FONT_HERSHEY_SIMPLEX, \n",
+    "            0.7, (240,0, 159), 2)\n",
+    "cv2.imshow(\"Contours\", output)\n",
+    "cv2.waitKey(0)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "416a54a5",
+   "metadata": {},
+   "source": [
+    "# Erosions and Dilations"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "id": "06b82b7c",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "49"
+      ]
+     },
+     "execution_count": 15,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# we apply erosions to reduce the size of foreground objects\n",
+    "mask = thresh.copy()\n",
+    "mask = cv2.erode(mask, None, iterations=5)\n",
+    "cv2.imshow(\"Eroded\", mask)\n",
+    "cv2.waitKey(0)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "id": "8fb5663c",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "49"
+      ]
+     },
+     "execution_count": 17,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# dilations can increase the size of the ground objects\n",
+    "mask = thresh.copy()\n",
+    "mask = cv2.dilate(mask, None, iterations=5)\n",
+    "cv2.imshow(\"Dilated\", mask)\n",
+    "cv2.waitKey(0)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "bc5b3e7b",
+   "metadata": {},
+   "source": [
+    "# Masking and Bitwise Operations"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "id": "678bc1e9",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "52"
+      ]
+     },
+     "execution_count": 18,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# take our mask and apply a bitwise AND to our input image,\n",
+    "# keeping only the masked regions\n",
+    "mask = thresh.copy()\n",
+    "output = cv2.bitwise_and(image, image, mask=mask)\n",
+    "cv2.imshow(\"Output\", output)\n",
+    "cv2.waitKey(0)"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
-   "id": "cdd967bd",
+   "id": "cb0f6f22",
    "metadata": {},
    "outputs": [],
    "source": []
